add lable for pod

--- a/app/bankportal-api-deployment.yaml
+++ b/app/bankportal-api-deployment.yaml
@@ -10,6 +10,9 @@ spec:
     matchLabels:
       app: bankportal-api
   template: 
+    metadata:
+    labels:
+      app: bankportal-api
     spec:
       containers:
         - name: bankportal-api
